[package]
name = "tempstatsd"
version = "0.1.0"
authors = ["Tyler Dorn <tylergdorn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rusqlite = { version = "0.26.1", features = ["bundled"]}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.130"
r2d2_sqlite = "0.19.0"
r2d2 = "0.8.9"